# Sandip_emission_dahsboard

./: README.md  app.py  app1.py  data_simulation.py  pyproject.toml  red_parquet.py  requirements.txt
assets/: custom.css  eca_boundary.geojson
components/: admin.py  comparative_insights.py  compliance_alerts.py  dashboard_overview.py  login.py  map_view.py  reports.py  vessel_analytics.py  zone_analytics.py
